[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/States/PlayState/StrumLine.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/States/PlayState/hud.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/HUD/health_bar.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Characters/Icons/icon_bf.png" type="Texture" id=4]
[ext_resource path="res://Assets/Other/Font/font_game.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Sprites/HUD/ready_set_go_sheet.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Nodes/alphabet.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sounds/intro_3.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sprites/HUD/time_bar.png" type="Texture" id=9]

[node name="HUD" type="Node2D"]
position = Vector2( 640, 360 )
script = ExtResource( 2 )
player_strum = NodePath("PlayerStrum")
enemy_strum = NodePath("EnemyStrum")

[node name="Ratings" type="Node2D" parent="."]

[node name="EnemyStrum" parent="." instance=ExtResource( 1 )]
position = Vector2( -494, -255 )
scale = Vector2( 0.7, 0.7 )
is_player = true

[node name="PlayerStrum" parent="." instance=ExtResource( 1 )]
position = Vector2( 146, -255 )
scale = Vector2( 0.7, 0.7 )
is_player = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -640.0
margin_top = -338.0
margin_bottom = -317.0
rect_scale = Vector2( 2, 2 )
align = 1

[node name="LabelRating" type="Control" parent="."]
visible = false
margin_left = -640.0
margin_top = -90.0
margin_right = -90.0
margin_bottom = 495.0
rect_scale = Vector2( 0.4, 0.4 )
script = ExtResource( 7 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -301.0
margin_top = 276.0
margin_right = 300.0
margin_bottom = 295.0
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 1
tint_under = Color( 1, 0, 0, 1 )
tint_progress = Color( 0.521569, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icons" type="Node2D" parent="HealthBar"]
position = Vector2( 304, 8 )

[node name="Player" type="Sprite" parent="HealthBar/Icons"]
position = Vector2( 48, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 4 )
hframes = 2

[node name="Enemy" type="Sprite" parent="HealthBar/Icons"]
position = Vector2( -48, 0 )
texture = ExtResource( 4 )
hframes = 2

[node name="TimeBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -123.5
margin_top = -336.0
margin_right = 123.5
margin_bottom = -317.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 9 )
tint_under = Color( 0, 0, 0, 1 )

[node name="TimeLabel" type="Label" parent="TimeBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.0
margin_right = -42.0
margin_bottom = 4.0
rect_scale = Vector2( 1.2, 1.2 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "12:55"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoContainer" type="HBoxContainer" parent="."]
margin_left = -640.0
margin_top = 306.0
margin_right = 640.0
margin_bottom = 346.0
alignment = 1

[node name="InfoBar2" type="Label" parent="InfoContainer"]
margin_right = 634.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
clip_text = true

[node name="InfoBar" type="Label" parent="InfoContainer"]
margin_left = 646.0
margin_right = 1280.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
clip_text = true

[node name="CountdownSprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
hframes = 3

[node name="CountdownStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
